--- a/restful-webservices/src/main/resources/application.properties
+++ b/restful-webservices/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 logging.level.org.springframework = info
 management.endpoints.web.exposure.include=*
+spring.h2.console.enabled = true
+spring.jpa.show-sql = true
